# sirius-cpp

./: .gitignore  README.md
election/: CMakeLists.txt
election/bully/: CMakeLists.txt
election/bully/include/: ElectionState.h  IRatingStrategy.h
election/bully/protos/: messages.proto
election/bully/src/: CMakeLists.txt  ElectionState.cpp
