cmake_minimum_required(VERSION 3.20.0)
project(sparta)
set(CMAKE_CXX_STANDARD 17)
include_directories(${PROTOBUF_INCLUDE_DIRS})
find_package(Protobuf REQUIRED)
set(STREAM_PROTOCOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../protos/v1")
FILE(GLOB_RECURSE STREAM_PROTOCOL_FILES ${STREAM_PROTOCOL_DIR}/*.proto)
foreach(ProtoFile ${STREAM_PROTOCOL_FILES})
    execute_process(COMMAND protoc --cpp_out=${CMAKE_CURRENT_BINARY_DIR} -I ${STREAM_PROTOCOL_DIR} ${ProtoFile} WORKING_DIRECTORY ${STREAM_PROTOCOL_DIR})
endforeach()
aux_source_directory(${CMAKE_CURRENT_BINARY_DIR} PROTO_SRCS)
aux_source_directory(.)